Fix nanobind API usage in Python bindings
Fixed compilation errors by using correct nanobind APIs:

1. **GetNextTokens()**: Copy data to Python-owned numpy array using
   nb::capsule for memory management (temporal borrow)

2. **GetSequence()**: Create zero-copy view with nb::capsule that
   owns the BorrowedArrayView, which keeps parent alive via intrusive_ptr

3. **eos_token_ids property**: Same zero-copy pattern as GetSequence

4. **encode() method**: Same zero-copy pattern

5. **Removed def_buffer()**: nanobind doesn't have this method.
   View classes are internal and not exposed to Python.

6. **Fixed CMakeLists.txt**: Exclude test files from python module sources

7. **Fixed test includes**: Use correct path for wrappers headers

Changes use nb::ndarray constructor with shape array and nb::capsule
for lifetime management instead of non-existent allocate()/mutable_data()
methods and def_buffer().

Successfully builds on Linux with GCC 13.3.0.

--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -5,8 +5,14 @@ file(GLOB python_srcs CONFIGURE_DEPENDS
   "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
 )
 
-# Ensure intrusive_counter.cpp is included for nanobind intrusive reference counting
-list(APPEND python_srcs "${CMAKE_CURRENT_SOURCE_DIR}/intrusive_counter.cpp")
+# Remove test files from python module sources
+list(FILTER python_srcs EXCLUDE REGEX ".*test.*\\.cpp$")
+
+# Ensure intrusive_counter.cpp and oga_wrapper_impl.cpp are included
+list(APPEND python_srcs 
+  "${CMAKE_CURRENT_SOURCE_DIR}/intrusive_counter.cpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/oga_wrapper_impl.cpp"
+)
 
 # Find nanobind and create Python module
 find_package(Python COMPONENTS Interpreter Development.Module REQUIRED)
