--- a/test/python/requirements.txt
+++ b/test/python/requirements.txt
@@ -1,11 +1,11 @@
 coloredlogs
 flatbuffers
-numpy<2
+numpy
 packaging
 protobuf==5.29.5
 sympy
 pytest
-onnx
+onnx==1.19.1
 onnx_ir>=0.1.3
 transformers
 huggingface_hub[cli]
