--- a/.github/workflows/linux-gpu-x64-build.yml
+++ b/.github/workflows/linux-gpu-x64-build.yml
@@ -123,7 +123,7 @@ jobs:
             bash -c " \
               /usr/bin/cmake --preset linux_gcc_cuda_release \
                 -DMANYLINUX=ON \
-                -DPYTHON_EXECUTABLE=${{ env.PYTHON_EXECUTABLE }} "
+                -DPython_EXECUTABLE=${{ env.PYTHON_EXECUTABLE }} "
 
       - name: Build with Cmake in Docker
         run: |
