--- a/.github/workflows/mac-cpu-arm64-build.yml
+++ b/.github/workflows/mac-cpu-arm64-build.yml
@@ -77,7 +77,7 @@ jobs:
         run: |
           export MACOSX_DEPLOYMENT_TARGET=$(sw_vers -productVersion | cut -d. -f1,2)
           export RUSTFLAGS='-C link-arg=-Wl,-undefined,dynamic_lookup -C link-arg=-Wl,-no_dead_strip_inits_and_terms'
-          cmake --preset macos_arm64_cpu_release
+          cmake --preset macos_arm64_cpu_release -DPython_EXECUTABLE=python
 
       - name: Build with CMake
         run: |
