--- a/.pipelines/stages/jobs/nuget-packaging-job.yml
+++ b/.pipelines/stages/jobs/nuget-packaging-job.yml
@@ -261,19 +261,23 @@ jobs:
       foreach ($file in $artifacts) {
         $a = $file.Name
         Write-Host "Extracting " $a
-        $rid_match = $a -match "onnxruntime-genai-$(genai_version_raw)-(.+?)-?(?:cuda|dml)?(\.zip|\.tar\.gz)"
-        if ($rid_match) {
-          $rid = $Matches.1
-        }
-        else {
-          $rid_match = $a -match "onnxruntime-genai-(android|ios)-$(genai_version_raw)(.+?)?(\.zip|\.aar)"
-          if ($rid_match) {
-            $rid = $Matches.1
-          }
-          else {
-            Write-Host "Invalid artifact name" $file
-            return
-          }
+        if ($a -like "*win-x64*") {
+          $rid = "win-x64"
+        } elseif ($a -like "*win-arm64*") {
+          $rid = "win-arm64"
+        } elseif ($a -like "*linux-x64*") {
+          $rid = "linux-x64"
+        } elseif ($a -like "*osx-x64*") {
+          $rid = "osx-x64"
+        } elseif ($a -like "*osx-arm64*") {
+          $rid = "osx-arm64"
+        } elseif ($a -like "*android*") {
+          $rid = "android"
+        } elseif ($a -like "*ios*") {
+          $rid = "ios"
+        } else {
+          Write-Host "Unknown artifact name" $a
+          return
         }
 
         mkdir -Force $outputDir/$rid
