--- a/.github/workflows/win-directml-x64-build.yml
+++ b/.github/workflows/win-directml-x64-build.yml
@@ -15,7 +15,7 @@ env:
   HF_TOKEN: ${{ secrets.HF_TOKEN }}
   AZCOPY_AUTO_LOGIN_TYPE: MSI
   AZCOPY_MSI_CLIENT_ID: 63b63039-6328-442f-954b-5a64d124e5b4
-  ORT_NUGET_API: "https://api.nuget.org/v3-flatcontainer/microsoft.ml.onnxruntime.directml/index.json"
+  ORT_NIGHTLY_REST_API: "https://feeds.dev.azure.com/aiinfra/PublicPackages/_apis/packaging/Feeds/ORT-Nightly/packages?packageNameQuery=Microsoft.ML.OnnxRuntime.DirectML&api-version=6.0-preview.1"
   ORT_PACKAGE_NAME: "Microsoft.ML.OnnxRuntime.DirectML"
   dml_dir: "Microsoft.AI.DirectML.1.15.2"
   dml_zip: "Microsoft.AI.DirectML.1.15.2.zip"
@@ -50,14 +50,16 @@ jobs:
           add-cmake-to-path: 'true'
           disable-terrapin: 'false'
 
-      - name: Download OnnxRuntime from NuGet.org
+      - name: Download OnnxRuntime Nightly
         shell: pwsh
         run: |
-          $resp = Invoke-RestMethod "${{ env.ORT_NUGET_API }}"
-          $ORT_VERSION = $resp.versions[-1]
-          Write-Host "Latest stable ORT DirectML version: $ORT_VERSION"
-          "ORT_VERSION=$ORT_VERSION" | Out-File -FilePath $env:GITHUB_ENV -Append
-          nuget install ${{ env.ORT_PACKAGE_NAME }} -version $ORT_VERSION -x -NonInteractive
+          $resp = Invoke-RestMethod "${{ env.ORT_NIGHTLY_REST_API }}"
+          # $ORT_NIGHTLY_VERSION = $resp.value[0].versions[0].normalizedVersion
+          $ORT_NIGHTLY_VERSION = "1.23.0"
+
+          Write-Host "$ORT_NIGHTLY_VERSION"
+          "ORT_NIGHTLY_VERSION=$ORT_NIGHTLY_VERSION" | Out-File -FilePath $env:GITHUB_ENV -Append
+          nuget install ${{ env.ORT_PACKAGE_NAME }} -version $ORT_NIGHTLY_VERSION -x -NonInteractive
 
       - name: Download DirectML
         run: |
