Undo changes after syncing with main

--- a/.pipelines/stages/jobs/custom-nuget-packaging-job.yml
+++ b/.pipelines/stages/jobs/custom-nuget-packaging-job.yml
@@ -22,6 +22,12 @@ jobs:
 
   - template: steps/utils/flex-download-pipeline-artifact.yml
     parameters:
+      StepName: 'Download win-cpu-arm64 capi Artifacts'
+      ArtifactName: onnxruntime-genai-win-cpu-arm64-capi
+      TargetPath: '$(Build.BinariesDirectory)/artifact-downloads'
+
+  - template: steps/utils/flex-download-pipeline-artifact.yml
+    parameters:
       StepName: 'Download osx-x64 capi Artifacts'
       ArtifactName: onnxruntime-genai-osx-cpu-x64-capi
       TargetPath: '$(Build.BinariesDirectory)/artifact-downloads'
@@ -57,6 +63,8 @@ jobs:
         Write-Host "Extracting " $a
         if ($a -like "*win-x64*") {
           $rid = "win-x64"
+        } elseif ($a -like "*win-arm64*") {
+          $rid = "win-arm64"
         } elseif ($a -like "*osx-x64*") {
           $rid = "osx-x64"
         } elseif ($a -like "*osx-arm64*") {
@@ -102,10 +110,12 @@ jobs:
       Write-Host "##vso[task.setvariable variable=genai_nuget_package_name;]$genai_nuget_package_name"
 
       $win_x64_artifact_path = (Get-ChildItem -Path '$(Build.BinariesDirectory)/artifact-downloads/win-x64/')[0].FullName
+      $win_arm64_artifact_path = (Get-ChildItem -Path '$(Build.BinariesDirectory)/artifact-downloads/win-arm64/')[0].FullName
       $osx_x64_artifact_path = (Get-ChildItem -Path '$(Build.BinariesDirectory)/artifact-downloads/osx-x64/')[0].FullName
       $osx_arm64_artifact_path = (Get-ChildItem -Path '$(Build.BinariesDirectory)/artifact-downloads/osx-arm64/')[0].FullName
 
       Write-Host "Win x64 artifact path " $win_x64_artifact_path
+      Write-Host "Win arm64 artifact path " $win_arm64_artifact_path
       Write-Host "OSX x64 artifact path " $osx_x64_artifact_path
       Write-Host "OSX arm64 artifact path " $osx_arm64_artifact_path
 
@@ -118,6 +128,7 @@ jobs:
         --root_dir $(Build.Repository.LocalPath) `
         --nuspec_path $(Build.Repository.LocalPath)/nuget/$genai_nuget_package_name.nuspec `
         --win_x64 $win_x64_artifact_path `
+        --win_arm64 $win_arm64_artifact_path `
         --osx_x64 $osx_x64_artifact_path `
         --osx_arm64 $osx_arm64_artifact_path `
         --commit_id $(Build.SourceVersion)
@@ -146,4 +157,3 @@ jobs:
     inputs:
       targetPath: '$(Build.ArtifactStagingDirectory)\nuget'
       artifactName: $(genai_nuget_package_name)
-      
